Bug 251382 - [WGSL] Fix runtime-sized array serialization
Summary: [WGSL] Fix runtime-sized array serialization
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tadeu Zagallo
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-01-30 12:26 PST by Tadeu Zagallo
Modified: 2023-01-31 00:46 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tadeu Zagallo 2023-01-30 12:26:53 PST
...
Comment 1 Radar WebKit Bug Importer 2023-01-30 12:29:49 PST
<rdar://problem/104832236>
Comment 2 Tadeu Zagallo 2023-01-30 12:31:30 PST
Pull request: https://github.com/WebKit/WebKit/pull/9337
Comment 3 EWS 2023-01-31 00:46:37 PST
Committed 259611@main (dfc987f106d8): <https://commits.webkit.org/259611@main>

Reviewed commits have been landed. Closing PR #9337 and removing active labels.