[WGSL] Fix runtime-sized array serialization https://bugs.webkit.org/show_bug.cgi?id=251382 <rdar://problem/104832236>

Reviewed by Myles C. Maxfield.

Previously the implementation only supported fixed size arrays. We add support
for serializing runtime-sized arrays by making it an array of size 1, since they
are only allowed at the end of the buffer.

* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::visit):

Canonical link: https://commits.webkit.org/259611@main